samples/_failures_safe/1761179826_bb6c0b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e509c495.c: In function ‘main’:
./samples/SAFE/__tmp_e509c495.c:157:5: error: expected identifier or ‘(’ at end of input
  157 |     for (size_t
      |     ^~~
./samples/SAFE/__tmp_e509c495.c:157:5: error: expected declaration or statement at end of input
